1.txt
In file included from /home/jeff/github/kumose/fermat/fermat/container/list.h:18,
                 from /home/jeff/github/kumose/fermat/benchmark/lru_cache.cc:12:
/home/jeff/github/kumose/fermat/fermat/memory/allocator.h: In instantiation of ‘class fermat::AlignedAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8> >’:
/usr/include/c++/11/type_traits:756:38:   required from ‘struct std::is_empty<fermat::AlignedAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8> > >’
/home/jeff/github/kumose/fermat/fermat/container/compressed_pair.h:323:11:   required from ‘class fermat::compressed_pair<fermat::ListNodeBase, fermat::AlignedAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8> > >’
/home/jeff/github/kumose/fermat/fermat/container/list.h:130:65:   required from ‘class fermat::ListBase<std::__cxx11::basic_string<char>, 8, fermat::AlignedAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<fermat::ListNode<std::__cxx11::basic_string<char> >, 8> > >’
/home/jeff/github/kumose/fermat/fermat/container/list.h:176:11:   required from ‘class fermat::List<std::__cxx11::basic_string<char>, 8>’
/home/jeff/github/kumose/fermat/benchmark/lru_cache.cc:51:74:   required from here
/home/jeff/github/kumose/fermat/fermat/memory/allocator.h:94:60: error: static assertion failed: alignment not valid
   94 |         static_assert(Malloc::is_valid_alignment<Alignment>(), "alignment not valid");
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/jeff/github/kumose/fermat/fermat/memory/allocator.h:94:60: note: ‘fermat::Malloc::is_valid_alignment<8>()’ evaluates to false
make[2]: *** [benchmark/CMakeFiles/mem_lru_cache.dir/build.make:79: benchmark/CMakeFiles/mem_lru_cache.dir/lru_cache.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1273: benchmark/CMakeFiles/mem_lru_cache.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
